--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "nodemon": "^1.14.11",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "tape": "^4.8.0"
   }
 }
