--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "test": "node test.js"
   },
+  "engines": {
+    "node": "6.11.0",
+    "npm": "4.6.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://git.heroku.com/fierce-tor-40065.git"
