--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "lame": "^1.2.4",
     "nodemon": "^1.14.11",
     "request": "^2.83.0",
+    "speaker": "^0.4.0",
     "tape": "^4.8.0"
   }
 }
